2004-04-04  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerb_file.[hc], src/drill.c, src/amacro.c, gerber.c:
	  Changed gerb_fgetint() so it can return number of parsed characters.
	  This is useful when parsing coordinates in omit trailing zeros mode.
	  Omit trailing zeros is also handled properly now. Reported by Joachim
	  Jansen and filed as bug #918344.
	
2004-02-24  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Apperently under GTK2 both delete_event and destroy
	  signals is emitted when you press the little cross in the 
	  decoration bar. When both signals were emitted gerbv tried to free
	  the same memory twice.

2004-02-14  Stefan Petersen  <spe@stacken.kth.se>

	* src/Makefile.am: Making sure init.scm is copied to the right 
	  place at install.

2004-02-13  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: The good old circles revisited. This time Dan
	  noticed that circles with the same start and end point did not 
	  draw properly ie as circles. It became points.

2004-02-08  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in: Apperently auto* doesn't define $prefix if you
	  don't set it in your script. The autotools has become more and
	  more of a moving target...

	* man/gerbv.1.in: A bunch of updates, mainly reflecting the new
	  features.

2004-02-07  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Save screen.path even when we load a project file.

	* src/gerbv.c: Fixed a segmentation fault when I tried to free
	  an optarg:ed variable.

2004-02-05  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Dan strikes again. Option -p (with appropriate 
	  error message) added as an alternative to --project.

2004-02-01  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Patch from Dan causes the "save as..." dialog box 
	  to come up if you try to do a "save" with no current project 
	  file name.
	* src/gerbv.c: Yet another patch from Dan to put project filename
	  in title of window.
