@@ -1,3 +1,8 @@
+2004-04-21  Stefan Petersen  <spe@stacken.kth.se>
+
+	* src/gerbv.c: Added keys f for fit, z for zoom in and Z for zoom out
+	  after request from Stefan Thiede.
+
 2004-04-04  Stefan Petersen  <spe@stacken.kth.se>
 
 	* src/gerb_file.[hc], src/drill.c, src/amacro.c, gerber.c:
